# mikaana

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  hugo.toml
.github/workflows/: deploy.yml
api/: Cargo.toml
api/src/: auth.rs  comments.rs  db.rs  forum.rs  github_stats.rs  main.rs  votes.rs
archetypes/: default.md
assets/css/extended/: custom.css
content/: about.md  search.md
content/blog/: _index.md  gpu-accelerated-simulation.md  hello-world.md  null-convention-logic.md  skalp-design-choices.md  skalp-design-patterns.md  skalp-ir-pipeline.md  skalp-whitepaper.md  vhdl-frontend.md
content/discuss/: _index.md
content/news/: _index.md  skalp-v0.1.0.md  skalp-v0.1.1.md  skalp-v0.2.0.md
content/projects/: _index.md  bhdl.md  novel.md  skalp.md
content/supporting-docs/skalp/: aggregator-submissions.md  skalp-whitepaper.md  skalp-whitepaper.tex
content/tutorial/: 01-getting-started.md  02-state-machines.md  03-uart-receiver.md  04-arrays-and-generics.md  05-parameterization.md  06-structs-and-composition.md  07-enums-and-matching.md  08-clock-domain-crossing.md  09-safety-and-annotations.md  10-testing.md  _index.md
content/tutorial/skalp/: 01-getting-started.md  (+9 more)
interactive/: Cargo.toml  Trunk.toml  index.html
interactive/src/: api.rs  auth.rs  comments.rs  forum.rs  github_stats.rs  main.rs  votes.rs
layouts/discuss/: list.html
layouts/partials/: comments.html  extend_footer.html  extend_head.html  post_nav_links.html
layouts/shortcodes/: github-stats.html
shared/: Cargo.toml
shared/src/: lib.rs
static/: CNAME
(+10 files in other folders)
