[package]
name = "mikaana-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ammonia = "4"
urlencoding = "2"
mikaana-shared = { path = "../shared" }
