[package]
name = "mikaana-interactive"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Document",
    "Window",
    "Element",
    "Storage",
    "Location",
    "Url",
    "UrlSearchParams",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
mikaana-shared = { path = "../shared" }
